--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/karla": "^4.5.0",
+    "@fontsource/rubik": "^4.5.0",
     "@urql/devtools": "^2.0.3",
     "framer-motion": "^4",
     "graphql": "^15.5.1",
