--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "baseUrl": "src"
     
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/ui/LangSelect/index.tsx", "src/components/Content/index.tsx"],
   "exclude": ["node_modules"]
 }
