--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.14",
     "@chakra-ui/react": "^1.6.5",
+    "@emotion/css": "^11.1.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/karla": "^4.5.0",
@@ -19,7 +20,7 @@
     "@urql/devtools": "^2.0.3",
     "framer-motion": "^4",
     "graphql": "^15.5.1",
-    "next": "11.0.1",
+    "next": "^11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "urql": "^2.0.4"
