--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intl": "^5.20.10",
     "urql": "^2.0.4"
   },
   "devDependencies": {
