--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^4",
     "graphql": "^15.5.1",
     "next": "^11.1.0",
+    "next-seo": "^4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intl": "^5.20.10",
