--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": "src"
-    
+    "baseUrl": "src",
+    "noImplicitAny": false
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/ui/LangSelect/index.tsx", "src/modules/Content/index.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/ui/LangSelect/index.tsx",
+    "src/modules/Content/index.tsx"
+  ],
   "exclude": ["node_modules"]
 }
